-map image link added -external links to holidays and academic calendar added -margin fix homepage -qa aligned -tum tum tracker error handling (timeout 3000) -queries updated homepage

--- a/css/dashboard-general.css
+++ b/css/dashboard-general.css
@@ -1,5 +1,5 @@
 .data-display-header{
-    /*margin-top:50px;*/
+    margin-top:50px;
     padding-top: 3em;
     padding-bottom: 3em;
 }
