--- a/css/dashboard-tiles-home.css
+++ b/css/dashboard-tiles-home.css
@@ -55,3 +55,7 @@
 .feedback-tile {
     background-color: #607d8b;
 }
+
+.homepage-map {
+    align-content: center;
+}
